--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -28,32 +28,32 @@
       right: 50px;">
     <i class="fas fa-plus"></i> Dodaj
   </button>
+  <div class="pre-scrollable">
+    <div class="container"
+        *ngFor="let worker of workers | search:['name', searchText]; let i = index;">
+          <ul class="list-group">
+            <li class="list-group-item">
 
-  <div class="container"
-      *ngFor="let worker of workers | search:['name', searchText]; let i = index;">
-        <ul class="list-group">
-          <li class="list-group-item">
-
-            <div class="workertab"
-              *ngIf="this.worker.editing == false">
-                {{worker.name}}
-                <div class="buttons">
-                  <button type="button" name="button" (click)="this.worker.editing = true; str = this.worker.name; ResetOthers(i);" class="btn btn-primary btn-sm"><i class="fas fa-edit"></i> Izmijeni</button>
-                  <button type="button" name="button" (click)="RemoveWorker(i, this.worker.name);" class="btn btn-danger btn-sm" style="margin-left: 10px;"><i class="fas fa-trash-alt"></i> Obriši</button>
-                </div>
-            </div>
-            <div class="workertab"
-              *ngIf="this.worker.editing == true">
-              <input id="str" [(ngModel)]="str" type="text" ng-model="inputText" >
-                <div class="buttons">
-                  <button type="button" name="button" (click)="SaveWorker(this.worker.id, i);" class="btn btn-primary btn-sm"><i class="fas fa-save"></i> Snimi</button>
-                  <button type="button" name="button" (click)="this.worker.editing = false;" class="btn btn-secondary btn-sm" style="margin-left: 10px;"><i class="fas fa-undo"></i> Odbaci</button>
-                </div>
-            </div>
-          </li>
-        </ul>
+              <div class="workertab"
+                *ngIf="this.worker.editing == false">
+                  {{worker.name}}
+                  <div class="buttons">
+                    <button type="button" name="button" (click)="this.worker.editing = true; str = this.worker.name; ResetOthers(i);" class="btn btn-primary btn-sm"><i class="fas fa-edit"></i> Izmijeni</button>
+                    <button type="button" name="button" (click)="RemoveWorker(i, this.worker.name);" class="btn btn-danger btn-sm" style="margin-left: 10px;"><i class="fas fa-trash-alt"></i> Obriši</button>
+                  </div>
+              </div>
+              <div class="workertab"
+                *ngIf="this.worker.editing == true">
+                <input id="str" [(ngModel)]="str" type="text" ng-model="inputText">
+                  <div class="buttons">
+                    <button type="button" name="button" (click)="SaveWorker(this.worker.id, i);" class="btn btn-primary btn-sm"><i class="fas fa-save"></i> Snimi</button>
+                    <button type="button" name="button" (click)="this.worker.editing = false;" class="btn btn-secondary btn-sm" style="margin-left: 10px;"><i class="fas fa-undo"></i> Odbaci</button>
+                  </div>
+              </div>
+            </li>
+          </ul>
+    </div>
   </div>
-
   <div class="infoHired">
     Ukupno zaposlenih: {{maxWorkers}}.
   </div>
@@ -69,7 +69,7 @@
     <input type="text" [(ngModel)]='searchText' class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
   </div>
 
-  <button type="button" class="btn btn-secondary btn-sm" (click)="adding = true;"
+  <button type="button" class="btn btn-secondary btn-sm" (click)="adding = true; addedSuccess = false; addedFail = false;"
       style="
       float: right;
       top: 10px;
@@ -78,8 +78,29 @@
     <i class="fas fa-plus"></i> Dodaj
   </button>
 
+  <div class="addedAlert"
+    *ngIf="addedSuccess == true">
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+      <strong>Uspješno ste dodali novi upis!</strong> Ukoliko ste pogriješili sa unosom svaki red možete editovati klikom na ikonicu
+        <i class="fas fa-user-edit"></i>.
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="addedSuccess = false;">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+  </div>
+  <div class="addedAlert"
+    *ngIf="addedFail == true">
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+      <strong>Nepravilan unos!</strong> U prazno polje unesite vrijeme dolaska u obliku: H:MM, npr. 9:15 za 9 sati i 15 minuta.
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="addedFail = false;">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+  </div>
+
   <div class="addingDaily"
     *ngIf="adding == true">
+
     <form (ngSubmit)="onSubmit()" #dailyForm="ngForm">
       <div class="form-group">
         <label for="exampleFormControlSelect1">Odaberi radnika:</label>
@@ -99,27 +120,58 @@
             [(ngModel)]="model.time" name="time">
         <small id="emailHelp" class="form-text text-muted">U prazno polje unesite vrijeme dolaska u obliku: H:MM, npr. 9:15 za 9 sati i 15 minuta.</small>
       </div>
-      <button type="submit" class="btn btn-primary">Završi upis</button>
+      <button type="submit" class="btn btn-primary btn-sm">Završi upis</button>
+      <button type="submit" class="btn btn-danger btn-sm" (click)="adding = false;" style="margin-left: 10px;">Odustani</button>
     </form>
   </div>
+  <div class="pre-scrollable">
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">Opcije</th>
+          <th scope="col">Ime uposlenika</th>
+          <th scope="col">Vrijeme dolaska</th>
+          <th scope="col">Stigao na vrijeme</th>
+        </tr>
+      </thead>
+      <tbody
+        *ngFor="let scrum of dailyscrum | search:['name', searchText]; let i = index;">
+        <tr
+          *ngIf="this.scrum.editing == false">
+            <th scope="row">
+              <i class="fas fa-user-edit" (click)="EditScrum(i);"></i>
+              <i class="fas fa-user-times" (click)="DeleteScrum(i);" style="margin-left: 2px;"></i>
+            </th>
+            <td>{{scrum.name}}</td>
+            <td>{{scrum.time}}</td>
+            <td>{{scrum.onTime}}</td>
+        </tr>
 
-  <table class="table">
-    <thead>
-      <tr>
-        <th scope="col"></th>
-        <th scope="col">Ime uposlenika</th>
-        <th scope="col">Vrijeme dolaska</th>
-        <th scope="col">Stigao na vrijeme</th>
-      </tr>
-    </thead>
-    <tbody
-      *ngFor="let scrum of dailyscrum | search:['name', searchText]; let i = index;">
-      <tr>
-        <th scope="row">opcije</th>
-        <td>{{scrum.name}}</td>
-        <td>{{scrum.time}}</td>
-        <td>{{scrum.onTime}}</td>
-      </tr>
-    </tbody>
-  </table>
+        <tr
+          *ngIf="this.scrum.editing == true;">
+            <th scope="row">
+              <i class="fas fa-save" (click)="SaveScrum(i);"></i>
+              <i class="fas fa-undo" (click)="CancelScrum(i);" style="margin-left: 2px;"></i>
+            </th>
+            <td>
+                <select class="form-control" id="exampleFormControlSelect1"
+                    [(ngModel)]="nameToEdit">
+                    <option
+                      *ngFor="let worker of workers; let i = index;">{{worker.name}}</option>
+                </select>
+            </td>
+            <td>
+              <div class="input-group mb-3">
+                <input id="str" [(ngModel)]="timeToEdit" ng-model="inputText" placeholder='Prethodna vrijednost: {{scrum.time}}' type="text" class="form-control">
+              </div>
+            </td>
+            <td>{{scrum.onTime}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div class="infoHired">
+    Broj redova: {{rowNumber}}
+  </div>
 </div>
